--- a/index.html
+++ b/index.html
@@ -2,19 +2,56 @@
 <html lang="en">
 <meta charset="utf-8">
 
-<title>purple</title>  
+<title>rebeccapurple</title>
 
 <meta name="viewport" content="width=device-width">
-<meta name="theme-color" content="purple">
+<meta name="theme-color" content="rebeccapurple">
 <meta name="color-scheme" content="dark">
-<meta name="description" content="purple my hair">
-  
+<meta name="description" content="rebeccapurple web color guide synesthesia">
+<link rel="help" href="https://github.com/s9a/rebecca">
+<link rel="license" href="LICENSE.txt">
+
 <style media=(color)>
-  html { color: mistyrose; background: purple; }
-  mark { color: purple; background: mistyrose; }
-  :any-link { color: aqua; background: indigo; }
-  ::selection { color: navy; background: aqua; }
+  html { color: mistyrose; background: rebeccapurple; }
+  mark { color: rebeccapurple; background: mistyrose; }
+  :any-link { color: lemonchiffon; background: transparent; }
+  ::selection { color: rebeccapurple; background: gold; }
 </style>
 
-<link rel="help" href="https://github.com/s9a/ocean">
-<link rel="license" href="UNLICENSE.txt">
+<style media=all>
+  html {
+    font-size: max(20pt, 3vw);
+  }
+
+  body {
+    box-sizing: border-box;
+    padding: 1ch;
+    display: flex;
+    flex-flow: column;
+    overflow-wrap: anywhere;
+  }
+
+  ins {
+    display: contents;
+    font-style: oblique;
+  }
+
+  h1 {
+    font-weight: 500;
+  }
+
+  p {
+    font-family: sans-serif;
+    margin: 1em auto 1em 0;
+    margin-block: 1em;
+    margin-inline: 0 auto;
+  }
+</style>
+
+<h1><code><ins>re</ins>becca<wbr>purple</code></h1>
+<p>This page features
+  <code>rebeccapurple</code> <code>background</code>
+  and <code>mistyrose</code> text
+  and <a href="/"><code>lemonchiffon</code> hyperlinks</a>
+
+<p><code>rebeccapurple</code> equals <code>#639</code> or <code>#663399</code>
